Bug 673703 - Fix non-deletion of nsmail-9999.tmp. r=mkmelin

Analysis by EarlgreyTea <earlgreypicard@gmail.com>

Differential Revision: https://phabricator.services.mozilla.com/D187774

--HG--
extra : amend_source : 3cc2c90a7b495b8ea3ba3f9fd235f4bd6ba23b69